# news-reader-agent__2601

./: README.md  main.py  pyproject.toml
config/: agents.yaml
output/: content_harvest.md  final_report.md  summary.md
